k8s/test/ingress.yml
apiVersion: v1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: spring-boot
    servicePort: 8080
