k8s/test/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: spring-boot
spec:
  containers:
    - name: spring-boot-hello-world
      image: gcr.io/testing-226112/spring-boot-hello-world:ce9d78f.959c3f86-0cd9-4155-9ff7-c888e67b9082
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "300m"
